--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -107,7 +107,7 @@
             </mat-tab>
 
 
-            <mat-tab label="User Table">
+            <mat-tab label="Student Table">
                 <div class="example-large-box mat-elevation-z4">
 
                     <!-- user -->
