--- a/src/app/auth/login copy/login.component.html
+++ b/src/app/auth/login copy/login.component.html
@@ -48,7 +48,7 @@
                 </div>
                 <button mat-button id='button-style-signins'>Sign In</button>
                 
-                <button mat-raised-button id='button-style-signin-googles'> <img src="assets/google.png" class="google"> Sign In with Google</button>
+                <!-- <button mat-raised-button id='button-style-signin-googles'> <img src="assets/google.png" class="google"> Sign In with Google</button> -->
 
                 <div id="signup">Don't have an account? <p (click)="signup()">Sign Up</p></div>
             </form>
