--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -37,8 +37,8 @@
                 </div>
                 <button mat-button id='button-style-signins'>Sign In</button>
 
-                <button mat-raised-button id='button-style-signin-googles'> <img src="assets/google.png" class="google">
-                    Sign In with Google</button>
+                <!-- <button mat-raised-button id='button-style-signin-googles'> <img src="assets/google.png" class="google">
+                    Sign In with Google</button> -->
 
                 <div id="signup">Don't have an account? <p (click)="signup()">Sign Up</p>
                 </div>
