--- a/src/app/dashboard/dashboard/user-detail/user-detail.component.html
+++ b/src/app/dashboard/dashboard/user-detail/user-detail.component.html
@@ -7,6 +7,6 @@
 <div>Dureation Date: {{detail.start_date}} - {{detail.end_date}}</div>
 
 <br>
-<div> Student who submit </div>
+<div (click)="show()" style="cursor: pointer;" class="view"> Student who submit  view here <mat-icon style="position: relative;top: 7px;">visibility</mat-icon></div>
 <br>
 
