--- a/src/app/dashboard/science/science.component.html
+++ b/src/app/dashboard/science/science.component.html
@@ -40,6 +40,10 @@
                 <mat-grid-tile class="tile1"><img src="../../../assets/science.png" width="100%" height="auto" max-width="680px"(click)=" navigateToScience()" ></mat-grid-tile>
                 <mat-grid-tile class="tile1"><img src="../../../assets/english.png" width="100%" height="auto" max-width="680px" (click)=" navigateToEnglish()"></mat-grid-tile>
                 <mat-grid-tile class="tile1"><img src="../../../assets/AP.jpg" width="100%" height="auto" max-width="680px" (click)=" navigateToAP()"></mat-grid-tile>
+                <mat-grid-tile class="tile1"><img src="../../../assets/tle.jpeg" style="width:500px" width="100%" height="auto" max-width="680px" (click)=" navigateTotle()"></mat-grid-tile>
+                <mat-grid-tile class="tile1"><img src="../../../assets/mapeh.jpg" width="100%" height="auto" max-width="680px" (click)=" navigateTomapeh()"></mat-grid-tile>
+                <mat-grid-tile class="tile1"><img src="../../../assets/filipino.jpeg" width="100%" height="auto" max-width="680px" (click)=" navigateTofilipino()"></mat-grid-tile>
+                <mat-grid-tile class="tile1"><img src="../../../assets/esp.jpeg" width="100%" height="auto" max-width="680px" (click)=" navigateToesp()"></mat-grid-tile>
               </mat-grid-list>
         </div>
         
