--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -12,7 +12,7 @@
 
 
     <!-- Viewallcompetency -->
-    <mat-card>
+    <mat-card style="    position: relative; bottom: 34px;">
         <!-- Header part of the Matcard -->
         <div class="titlebox">
             <div class="title">
