--- a/src/app/edit-grades/edit-grades.component.html
+++ b/src/app/edit-grades/edit-grades.component.html
@@ -16,7 +16,7 @@
         <!-- Header part of the Matcard -->
         <div class="titlebox">
             <div class="title">
-                <span>ADMIN</span>
+                <span>View Grade</span>
                 <br>
             </div>
             <div class="logo">
@@ -27,7 +27,7 @@
             
 
 
-            <mat-tab label="User Table">
+            <mat-tab label="Student Grades">
                 <div class="example-large-box mat-elevation-z4">
 
                     <!-- user -->
@@ -49,16 +49,16 @@
                     </div>
 
                     <div class="mat-elevation-z0">
-                        <table mat-table [dataSource]="viewAlldatasource">
+                        <table mat-table [dataSource]="data">
 
                             <ng-container matColumnDef="Email">
-                                <th mat-header-cell *matHeaderCellDef> Email </th>
-                                <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+                                <th mat-header-cell *matHeaderCellDef> Student Name</th>
+                                <td mat-cell *matCellDef="let element"> {{element.fName}} {{element.lName}} </td>
                             </ng-container>
 
                             <ng-container matColumnDef="FirstName">
-                                <th mat-header-cell *matHeaderCellDef> First Name </th>
-                                <td mat-cell *matCellDef="let element"> {{element.fName}} </td>
+                                <th mat-header-cell *matHeaderCellDef> Email </th>
+                                <td mat-cell *matCellDef="let element"> {{element.email}} </td>
                             </ng-container>
 
                             <ng-container matColumnDef="section">
@@ -69,25 +69,54 @@
                             </ng-container>
 
                             <ng-container matColumnDef="LastName">
-                                <th mat-header-cell *matHeaderCellDef> Last Name </th>
-                                <td mat-cell *matCellDef="let element"> {{element.lName}} </td>
+                                <th mat-header-cell *matHeaderCellDef> Math</th>
+                                <td mat-cell *matCellDef="let element"> {{element.Math}} </td>
                             </ng-container>
 
 
                             <ng-container matColumnDef="pnumber">
-                                <th mat-header-cell *matHeaderCellDef>Phone Number </th>
-                                <td mat-cell *matCellDef="let element"> {{element.pNumber}} </td>
+                                <th mat-header-cell *matHeaderCellDef>Science </th>
+                                <td mat-cell *matCellDef="let element"> {{element.Science}} </td>
                             </ng-container>
 
                             <ng-container matColumnDef="dob">
-                                <th mat-header-cell *matHeaderCellDef>Mark </th>
-                                <td mat-cell *matCellDef="let element"> --Grade-- </td>
+                                <th mat-header-cell *matHeaderCellDef>English </th>
+                                <td mat-cell *matCellDef="let element"> {{element.English}}</td>
                             </ng-container>
+
+                            <ng-container matColumnDef="AP">
+                                <th mat-header-cell *matHeaderCellDef> AP </th>
+                                <td mat-cell *matCellDef="let element"> {{element.AralingPanlipunan}}</td>
+                            </ng-container>
+
+                            <ng-container matColumnDef="TLE">
+                                <th mat-header-cell *matHeaderCellDef> TLE </th>
+                                <td mat-cell *matCellDef="let element">{{element.Tle}} </td>
+                            </ng-container>
+
+
+                            <ng-container matColumnDef="Mapeh">
+                                <th mat-header-cell *matHeaderCellDef> Mapeh </th>
+                                <td mat-cell *matCellDef="let element"> {{element.Mapeh}} </td>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Filipino">
+                                <th mat-header-cell *matHeaderCellDef> Filipino </th>
+                                <td mat-cell *matCellDef="let element">{{element.Filipino}}</td>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ESP">
+                                <th mat-header-cell *matHeaderCellDef> ESP </th>
+                                <td mat-cell *matCellDef="let element"> {{element.Esp}}</td>
+                            </ng-container>
+
+
+
 
 
 
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)='rowClicked(row)'></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
                         </table>
 
                         <mat-paginator [length]="total" [pageSize]="pageSize" [pageIndex]='pageNo - 1'
