--- a/src/app/body/header/header.component.html
+++ b/src/app/body/header/header.component.html
@@ -19,10 +19,7 @@
     <nav>
         <ul>
             <li><button mat-icon-button  (click)="home()">Home</button></li>
-            <li><button mat-icon-button >Service </button></li>
-            <li> <button mat-icon-button >Something </button></li>
-            <li><button mat-icon-button >About </button></li>
-            <li><button mat-icon-button >Contact Us</button></li>
+            <li (click)="open()"><button mat-icon-button >Contact Us</button></li>
             <!-- <li><button mat-icon-button (click)="login()">Login</button></li>
             <li><button mat-raised-button id="save-btn" (click)="signup()">Sign Up</button></li> -->
             <li><button mat-raised-button id="admin-bttn" (click)="admin()">Teacher Login</button></li>
