--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
 <div class="centered">SRNHS Highlight</div>
 
 <div class="about">something here</div>
-<button mat-raised-button id="getstart-bttn" >Get Started</button>
+<button mat-raised-button id="getstart-bttn" [routerLink]="'/register'">Get Started</button>
 
 </div>
 
