--- a/src/app/register-shared/register/register.component.html
+++ b/src/app/register-shared/register/register.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="header">
     <div id="title">  
         <div class="logo" (click)="home()">
-            <img src="../../../assets/logo.png" class="aio">
+            <img src="/assets/logo.png" class="aio">
          </div>
     </div>
 
@@ -42,7 +42,7 @@
             </tr>
             </div>
             <button mat-button id='button-style-create' [disabled]="button">Create Account</button>
-            <button mat-raised-button id='button-style-signin-google'> <img src="assets/google.png" class="googles">Sign Up with Google</button>
+            <!-- <button mat-raised-button id='button-style-signin-google'> <img src="assets/google.png" class="googles">Sign Up with Google</button> -->
           
          
                
